syntax = "proto3";

package grpc;

option go_package = "pkg/services/grpc/auth/proto";

service AuthService {
  rpc IsAuthorized (IsAuthorizedData) returns (IsAuthorizedResponse) {}
  rpc GetAccountInfo (GetAccountData) returns (GetAccountDataResponse) {}
  rpc GetAuthConfig (GetAuthConfigData) returns (GetAuthConfigResponse) {}
}

message IsAuthorizedData {
  string token = 1;
  string type = 2;
  string workspaceID = 3;
  string repositoryID = 4;
}

message IsAuthorizedResponse {
  bool isAuthorized = 1;
}

message GetAccountData {
  string token = 1;
  string email = 2;
}

message GetAccountDataResponse {
  string accountID = 1;
  bool isApplicationAdmin = 2;
  repeated string permissions = 3;
  string email = 4;
  string username = 5;
}

message GetAuthConfigData {}

message GetAuthConfigResponse {
  bool enableApplicationAdmin = 1;
  string authType = 2;
  bool disableEmails = 3;
}
